--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-toastr": "~1.5.0",
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
-    "angular": "~1.4.2"
+    "angular": "~1.4.2",
+    "angular-resource": "~1.4.8"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
